--- a/h/static/styles/common.scss
+++ b/h/static/styles/common.scss
@@ -607,7 +607,8 @@ pre {outline: 1px solid #ccc; padding: 5px; margin: 5px; }
   @include stretch-y;
   @include translateX(100%);
   height: 100%;
-  overflow: hidden;
+  overflow-y: auto;
+  overflow-x: hidden;
   -webkit-overflow-scrolling: touch;
   right: 0px;
   left: 0px;
@@ -654,7 +655,7 @@ pre {outline: 1px solid #ccc; padding: 5px; margin: 5px; }
   .panel {
     box-shadow: 0px 5px 7px rgba(0, 0, 0, 0.18);
     padding: 25px;
-    height: 100%;
+    // height: 100%;
     position: absolute;
     background-color: white;
     width: 100%;
@@ -667,6 +668,14 @@ pre {outline: 1px solid #ccc; padding: 5px; margin: 5px; }
     textarea {
       margin: 5px 0;
     }
+  }
+}
+
+.btn {
+  &.danger {
+    color: white;
+    background-image: -moz-linear-gradient(center top , #BD5862 10%, #BD5862 10%, #BD5862 100%);
+    box-shadow: 0px 0.2em 0px rgba(158, 95, 95, 0.2) inset, 0px 0.05em 0.1em rgba(0, 0, 0, 0.08);
   }
 }
 
