--- a/h/static/styles/forms.scss
+++ b/h/static/styles/forms.scss
@@ -323,4 +323,8 @@
 .account-form {
   margin-top: 30 / 13 * 1em;
   margin-bottom: 30 / 13 * 1em;
+
+  &:first-child {
+    margin-top: 15 / 13 * 1em;
+  }
 }
