--- a/h/templates/viewer.html
+++ b/h/templates/viewer.html
@@ -13,7 +13,9 @@
     <a href="" class="threadexp"
        title="{{collapsed && 'Expand' || 'Collapse'}}"
        ng-show="$parent.annotation"
-       />
+       ><span ng-class="{'icon-minus': !!collapsed,
+                         'icon-plus': !collapsed}"></span></a>
+
 
     <!-- Excerpts -->
     <div class="excerpt"
