--- a/h/static/styles/common.scss
+++ b/h/static/styles/common.scss
@@ -566,15 +566,28 @@ blockquote {
   }
 
   .threadexp {
-    font-size: 1.1em;  // to match the username header
-    height: $threadexp-width;
-    width: $threadexp-width;
+    background: $white;
+    color: $gray-light;
     position: absolute;
-    // .7em is 50% of a line-height of 1.4;
-    top: .7em - ($threadexp-width / 2);
-    left: -($threadexp-width / 2);
-    outline: 1px solid #aaa;
-    @include icon("minus_1.png");
+    width: 1.4em;
+    height: 1.4em;
+    top: 0;
+    left: -.7em;
+
+    span {
+      position: absolute;
+      top: (1.4 - $threadexp-width) / 2;
+      left: (1.4 - $threadexp-width) / 2;
+      width: $threadexp-width;
+      height: $threadexp-width;
+
+      &:before {
+        font-size: $threadexp-width;
+        position: absolute;
+        top: 0;
+        left: 0;
+      }
+    }
   }
 
   .annotation {
