--- a/h/static/styles/app.scss
+++ b/h/static/styles/app.scss
@@ -1,147 +1,12 @@
-@import 'compass';
-
+@import 'base';
 @import 'reset';
-@import 'common';
+@import 'topbar';
 
-
-[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak],
-.ng-cloak, .x-ng-cloak {
-  display: none !important;
-}
-
-body {
-  @extend .noise;
-  font-family: $sans-font-family;
-  word-wrap: break-word;
-}
-
-#{nest("hgroup", "#{headings()}")} {
-  margin: 0;
-}
-
-section {
-  margin: 2em 0;
-}
-
-svg { -webkit-tap-highlight-color: rgba(255, 255, 255, 0); }
-
-ol {
-  list-style-type: decimal;
-  padding-left: 3em;
-  margin-left: -1.5em;
-
-  li + li {
-    margin-top: 1em;
-  }
-}
+$base-font-size: 16px;
+$base-line-height: 26px;
+@import 'typography';
 
 .bookmarklet {
   padding: .12em;
   border: 1px dashed $gray;
-}
-
-#wrapper {
-  padding: .72em;
-  text-align: center;
-
-  @include respond-to(tablets desktops) {
-    padding-bottom: 4em;
-  }
-}
-
-.content {
-  margin: 0 auto;
-  text-align: left;
-
-  @include respond-to(tablets desktops) {
-    margin: auto;
-    max-width: $break-medium;
-    padding: 0 4em;
-  }
-
-  & > header {
-    @include respond-to(handhelds) {
-      text-align: center;
-    }
-
-    @include respond-to(wide-handhelds tablets desktops) {
-      @include pie-clearfix;
-      text-align: left;
-      img { float: left; }
-    }
-
-    margin-bottom: 2em;
-
-    hgroup h1 {
-      margin-bottom: 0 !important;
-    }
-  }
-
-  .domain {
-    margin: 3px 0 4px;
-  }
-
-  .domain .favicon {
-    margin: 0 8px;
-  }
-
-  .page {
-    margin-bottom: 16px;
-
-    a {
-      font-weight: bold;
-    }
-  }
-}
-
-
-.sheet {
-  border: solid 1px $gray-lighter;
-  border-radius: 2px;
-  font-family: $sans-font-family;
-  margin-bottom: .72em;
-  position: relative;
-  background-color: $body-background;
-
-  .close {
-    position: absolute;
-    right: 1em;
-    top: 1em;
-  }
-
-  input:not([type="submit"]) { width: 100%; }
-}
-
-
-.user {
-  font-weight: bold;
-  font-size: 1.1em;
-  &:hover {
-    color: $link-color-hover;
-    cursor: pointer;
-    text-decoration: underline;
-  }
-}
-
-
-.user-picker {
-  .avatar {
-    border-radius: 2px;
-  }
-
-  .dropdown-toggle {
-    .provider {
-      color: $gray-light;
-      display: none;
-    }
-    &:hover {
-      .provider {
-        display: inline;
-      }
-    }
-  }
-
-  .dropdown.open .provider {
-    display: inline;
-  }
 }
