--- a/h/static/styles/reset.scss
+++ b/h/static/styles/reset.scss
@@ -40,8 +40,8 @@ a img, img {
 
 input, textarea, button, select {
   @include reset-font;
-  line-height: normal;
   margin: 0;
+  padding: 0;
 }
 
 button,
