--- a/h/static/styles/simple-search.scss
+++ b/h/static/styles/simple-search.scss
@@ -1,28 +1,20 @@
 @import "base.scss";
 
 .simple-search {
-  overflow: hidden;
+  @include clearfix;
 }
 
 .simple-search-form {
-  @include clearfix;
   position: relative;
-  padding: 0 (20 / 13 * 1em);
+  padding: 0 1.5em;
   color: $gray;
 }
 
-.simple-search-form * {
-  box-sizing: border-box;
-}
-
 .simple-search-icon {
-  float: left;
-  display: inline;
-  font-size: 1.1em;
-  line-height: 2;
-  margin-left: -100%;
-  position: relative;
-  right: 19 / 14 * 1em;
+  margin-top: -.5em;
+  position: absolute;
+  top: 50%;
+  left: 0;
 
   :not(:focus) ~ & {
     color: $gray-lighter;
@@ -30,12 +22,11 @@
 }
 
 .simple-search-input {
-  float: left;
   outline: none;
   color: $text-color;
   width: 100%;
   border: none !important; // Override base input styles.
-  padding: (5 / 13 * 1em) 0;
+  line-height: 1.4em;  // WebKit will make the beam taller to fit otherwise
 
   .simple-search-inactive &:not(:focus) {
     border-color: #f3f3f3 !important;
@@ -52,17 +43,17 @@
     font-size: 0.85em;
   }
 
-  float: left;
-  position: relative;
-  top: 6 / 13 * 1em;
-  margin-right: -1.33em;
+  position: absolute;
+  right: 0;
+  top: 50%;
+  margin-top: -.5em;
   padding: 0;
   outline: none;
   border: none;
   background: none;
   color: $gray;
-  width: 1.33em;
-  height: 1.33em;
+  width: 1em;
+  height: 1em;
   @include box-shadow(none);
 
   &:focus, &:hover, &:active:not([disabled]) {
