--- a/h/static/styles/common.scss
+++ b/h/static/styles/common.scss
@@ -430,8 +430,13 @@ blockquote {
     color: $link-color;
   }
 
+  .magicontrol.dropdown {
+    top: 4px;
+  }
+
   fuzzytime {
-    margin: 0 .4em;
+    line-height: 2;
+
     a {
       color: $text-color;
       &:hover { color: $link-color-hover; }
@@ -619,9 +624,9 @@ pre {outline: 1px solid #ccc; padding: 5px; margin: 5px; }
 
   &[readonly] {
     .tagit-new, .tagit-close { display: none; }
-    li { 
-      padding: .1em .3em; 
-      font-size: 12px; 
+    li {
+      padding: .1em .3em;
+      font-size: 12px;
     }
     li.tagit-choice { margin-top: .1em; }
   }
