--- a/h/templates/editor.html
+++ b/h/templates/editor.html
@@ -1,7 +1,7 @@
 <div class="paper thread">
   <div class="excerpt" ng-repeat="target in annotation.target">
-    <blockquote ng-bind="target.quote" ng-hide="target.showDiff" />
-    <blockquote ng-bind-html="target.trustedDiffHTML" ng-show="target.showDiff" />
+    <blockquote class="annotation-quote" ng-bind="target.quote" ng-hide="target.showDiff" />
+    <blockquote class="annotation-quote" ng-bind-html="target.trustedDiffHTML" ng-show="target.showDiff" />
     <div class="small pull-right" ng-show="target.diffHTML">
       <input type="checkbox" ng-model="target.showDiff" ng-click="$event.stopPropagation()"> Show differences</input>
     </div>
