--- a/h/templates/viewer.html
+++ b/h/templates/viewer.html
@@ -13,8 +13,8 @@
     <a href="" class="threadexp"
        title="{{collapsed && 'Expand' || 'Collapse'}}"
        ng-show="$parent.annotation"
-       ><span ng-class="{'icon-minus': !!collapsed,
-                         'icon-plus': !collapsed}"></span></a>
+       ><span ng-class="{'icon-minus': !collapsed,
+                         'icon-plus': !!collapsed}"></span></a>
 
 
     <!-- Excerpts -->
