--- a/h/static/icomoon.css
+++ b/h/static/icomoon.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'h';
-	src:url('fonts/h.eot?-f82t8p');
-	src:url('fonts/h.eot?#iefix-f82t8p') format('embedded-opentype'),
-		url('fonts/h.woff?-f82t8p') format('woff'),
-		url('fonts/h.ttf?-f82t8p') format('truetype'),
-		url('fonts/h.svg?-f82t8p#h') format('svg');
+	src:url('fonts/h.eot?v75hyl');
+	src:url('fonts/h.eot?#iefixv75hyl') format('embedded-opentype'),
+		url('fonts/h.woff?v75hyl') format('woff'),
+		url('fonts/h.ttf?v75hyl') format('truetype'),
+		url('fonts/h.svg?v75hyl#h') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -23,6 +23,9 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
+.icon-uniE60E:before {
+	content: "\e60e";
+}
 .icon-minus:before {
 	content: "\e60d";
 }
