--- a/h/static/styles/pointers.scss
+++ b/h/static/styles/pointers.scss
@@ -6,7 +6,7 @@
   right: 0;
   position: absolute;
   margin-top: -8px;
-  height: 16px;
+  line-height: 1;
   width: 26px;
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
   text-align: center;
