Style the tags-input directive

--- a/h/templates/annotation.html
+++ b/h/templates/annotation.html
@@ -71,6 +71,7 @@
                 class="tags"
                 placeholder="Add tags…"
                 replace-spaces-with-dashes="false"
+                enable-editing-last-tag="true"
                 on-tag-added="addTag($tag)"
                 on-tag-removed="removeTag($tag)"></tags-input>
   </div>
