--- a/h/static/styles/tags-input.scss
+++ b/h/static/styles/tags-input.scss
@@ -57,3 +57,21 @@ tags-input {
     }
   }
 }
+
+.tags-read-only {
+  font-size: 0.92em;
+  margin: 0.16em 0;
+
+  .tag-list, .tag-item {
+    display: inline;
+  }
+
+  .tag-item a:after {
+    content: ", ";
+    color: $text-color;
+  }
+
+  .tag-item:last-child a:after {
+    content: none;
+  }
+}
