Hide the citation source in the editor
Close #1425

--- a/h/templates/editor.html
+++ b/h/templates/editor.html
@@ -6,5 +6,5 @@
       <input type="checkbox" ng-model="target.showDiff" ng-click="$event.stopPropagation()"> Show differences</input>
     </div>
   </div>
-  <div ng-model="annotation" class="annotation" />
+  <div ng-model="annotation" class="annotation" annotation-embedded="true" />
 </div>
