--- a/h/static/styles/app.scss
+++ b/h/static/styles/app.scss
@@ -140,3 +140,15 @@ ol {
     display: inline;
   }
 }
+
+.auth {
+  .nav-tabs {
+    border: 1px none $gray-lighter;
+    border-bottom-style: solid;
+    padding: 0.9em 1em 1.1em;
+      & > li {
+        a { padding-bottom: 3 / 13 * 1em;}
+      }
+  }
+}
+
