--- a/h/static/styles/common.scss
+++ b/h/static/styles/common.scss
@@ -354,6 +354,10 @@ h6 {
       padding-left: 2 / 13 * 1em;
       padding-right: 2 / 13 * 1em;
       padding-bottom: 1 / 13 * 1em;
+
+      &:hover {
+        color: $link-color-hover;
+      }
     }
 
     &:active a {
